--- a/index.html
+++ b/index.html
@@ -73,25 +73,48 @@
         </div>
 
         <!-- cards -->
-        <div class="container max-width-adaptive-md margin-bottom-lg">
+        <div class="stack-cards-container">
+          <!-- function 1 -->
             <ul class="stack-cards js-stack-cards">
               <li class="stack-cards__item js-stack-cards__item">
                   <div class="text-component">
                     <h2>Organize tangled tasks<br/>
                        like stacking blocks</h2>
-                    <p>
+                    <p class="function-description">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                   </div>
       
-                  <div class="col-6 height-100%">
-                    <img class="block width-100% height-100% object-cover" src="Assets/Images/function-1.png" alt="Image description">
+                  <div>
+                    <img src="Assets/Images/function-1.png" alt="Function 1">
                   </div>
 
                 </div>
               </li>
             </ul>
+
+            <!-- function 2 -->
+            <ul class="stack-cards js-stack-cards">
+              <li class="stack-cards__item js-stack-cards__item">
+                  <div class="text-component">
+                    <h2>Organize tangled tasks<br/>
+                       like stacking blocks</h2>
+                    <p class="function-description">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </div>
+      
+                  <div>
+                    <img src="Assets/Images/function-1.png" alt="Function 1">
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+
+
         </div>
 
     </section>
