scroll down animation
scroll down
-transition
-dissapearance

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Slice</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/tma0pfw.css">
-
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
@@ -23,9 +22,8 @@
     </header>
 
 
-    <!-- Main title -->
-    <section class="title">
-        
+    <!-- Intro Title -->
+    <section class="title"> 
         <!-- left description -->
         <div class="titleBox">
             <h1>To SLICE</h1>
@@ -61,10 +59,11 @@
     </section>
 
 
-    <!-- Main Section -->
+    <!-- Main Section:Functions -->
     <div class="scroll">
-      <p>Scroll Down</p>
+      <p style="opacity: 1;">Scroll Down</p>
     </div>
+
     <section class="main">
         <!-- wave -->
         <div class="waves">
@@ -113,14 +112,12 @@
                 </div>
               </li>
             </ul>
-
-
         </div>
-
     </section>
-
-
-
-
 </body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="script.js"></script>
+
+
 </html>
