--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <ul class="stack-cards js-stack-cards">
               <li class="stack-cards__item js-stack-cards__item">
                   <div class="text-component">
-                    <h2>Organize tangled tasks<br/>
-                       like stacking blocks</h2>
+                    <h2>Plan 24 hours<br/>
+                      with list and calendar</h2>
                     <p class="function-description">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -106,7 +106,7 @@
                   </div>
       
                   <div>
-                    <img src="Assets/Images/function-1.png" alt="Function 1">
+                    <img src="Assets/Images/function-2.png" alt="Function 1">
                   </div>
 
                 </div>
@@ -114,6 +114,23 @@
             </ul>
         </div>
     </section>
+
+    <!-- Quote holder -->
+    <section class="quote-container">
+      <div class="quote-background-wave">
+        <div class="wave3"></div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <section class="footer">
+      <div class="footer-menu">
+        <div class="logo"><a href="index.html">Slice</a></div>
+        <div class="footer-menu-item"><a href="index.html">About Creators</a></div>
+        <div class="footer-menu-item"><a href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a" target="_blank">Documentation</a></div>
+      </div>
+    </section>
+
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
