--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     <section class="title"> 
         <!-- left description -->
         <div class="titleBox">
+          <div class="app-name">
             <h1>To SLICE</h1>
+            <img class="app-logo" src="./Assets/Images/app-logo.svg"/>
+          </div>
 
-            <div class="title-description">
-                Your everyday tasks<br/>
-                into a piece of cake 
-            </div> 
-            <!-- <img class="title-line" src="./Assets/Images/main-line.svg"/>    -->
+          <div class="title-description">
+              Your everyday tasks<br/>
+              into a piece of cake 
+          </div> 
+          <!-- <img class="title-line" src="./Assets/Images/main-line.svg"/>    -->
 
             <!-- buttons to appstore -->
             <div　class="title-button-container" style="display: flex;
@@ -54,7 +57,7 @@
         </div>
 
         <!-- right image -->
-        <img src="./Assets/Images/Right.png" />
+        <img class="title-mockup" src="./Assets/Images/Right.png" />
 
     </section>
 
@@ -106,21 +109,59 @@
                   </div>
       
                   <div>
-                    <img src="Assets/Images/function-2.png" alt="Function 1">
+                    <img src="Assets/Images/function-2.png" alt="Function 2">
                   </div>
-
                 </div>
               </li>
             </ul>
+
+            <!-- function 3 -->
+            <ul class="stack-cards js-stack-cards">
+              <li class="stack-cards__item js-stack-cards__item">
+                  <div class="text-component">
+                    <h2>Check progress<br/>
+                      anytime on watch</h2>
+                    <p class="function-description">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </div>
+      
+                  <div>
+                    <img src="Assets/Images/function-3.png" alt="Function 3">
+                  </div>
+                </div>
+              </li>
+            </ul>
+
+
         </div>
     </section>
 
     <!-- Quote holder -->
-    <section class="quote-container">
-      <div class="quote-background-wave">
-        <div class="wave3"></div>
+    <section class="quote-container-box">
+      <div class="quote-container">
+        <div class="white-container" >
+          <img src = "./Assets/Images/quote-white.svg" alt="white container"/>
+          <p class="API-text">"API Text Holder"</p>
+        </div>
+        <div class="character-container">
+          <div class="left-character">
+            <img src = "./Assets/Images/character-left.png" alt="white container"/>
+          </div>
+          <div class="right-character">
+            <img src = "./Assets/Images/character-right.png" alt="white container"/>
+          </div>
+        </div>
+      </div>
+
+      <div class="quote-background-container">
+        <div class="quote-background">
+          <img src = "./Assets/Images/Background.svg" alt="white container"/>
+        </div>
       </div>
     </section>
+
 
     <!-- Footer -->
     <section class="footer">
