--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
         </div>
       </div>
 
-      <div class="quote-background-container">
+      <!-- <div class="quote-background-container">
         <div class="quote-background">
           <img src = "./Assets/Images/Background.svg" alt="white container"/>
         </div>
-      </div>
+      </div> -->
     </section>
 
 
