Main added background image span

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
           <div class="title-description">
               Your everyday tasks<br/>
-              into a piece of cake 
+              <span id="piece-of-cake"><span id="piece-of-cake-text">into a piece of cake</span></span>
           </div> 
           <!-- <img class="title-line" src="./Assets/Images/main-line.svg"/>    -->
 
