--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 <body>
     <!-- navigation bar -->
-    <header>
+      <section class="navigation margin">
         <div class="logo"><a href="index.html">Slice</a></div>
-        <div class="music">
-          Now Playing...<br/>
-          <img src = "./Assets/Images/music_note.svg" alt="music note"/>
-        </div>
-    </header>
+          <div class="music">
+            Now Playing...<br/>
+            <img src = "./Assets/Images/music_note.svg" alt="music note"/>
+          </div>
+      </section>
 
 
     <!-- Intro Title -->
-    <section class="title"> 
+    <section class="title margin"> 
         <!-- left description -->
         <div class="titleBox">
           <div class="app-name">
@@ -33,7 +33,7 @@
 
           <div class="title-description">
               Your everyday tasks<br/>
-              into a piece of cake 
+              into <span id="piece-of-cake">a piece of cake</span> 
           </div> 
           <!-- <img class="title-line" src="./Assets/Images/main-line.svg"/>    -->
 
@@ -67,7 +67,7 @@
       <p style="opacity: 1;">Scroll Down</p>
     </div>
 
-    <section class="main">
+    <section class="main margin">
         <!-- wave -->
         <div class="waves">
             <div class="wave1"></div>
@@ -154,17 +154,11 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="quote-background-container">
-        <div class="quote-background">
-          <img src = "./Assets/Images/Background.svg" alt="white container"/>
-        </div>
-      </div> -->
     </section>
 
 
     <!-- Footer -->
-    <section class="footer">
+    <section class="footer margin">
       <div class="footer-menu">
         <div class="logo"><a href="index.html">Slice</a></div>
         <div class="footer-menu-item"><a href="index.html">About Creators</a></div>
