--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <!-- navigation bar -->
       <section class="navigation margin">
         <div class="logo"><a href="index.html">Slice</a></div>
-          <div class="music">
-            Now Playing...<br/>
-            <img src = "./Assets/Images/music_note.svg" alt="music note"/>
+          <div class="weather-container">
+            <span id="location">Location</span>,
+            <span id="weather">Weather</span><br/>
+            <img id="weather-emoji" src="./Assets/Images/music_note.svg" alt="music note"/>
           </div>
       </section>
 
