--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <section class="navigation margin">
         <div class="logo"><a href="index.html">Slice</a></div>
           <div class="weather-container">
-            <span id="location">Location</span>,
-            <span id="weather">Weather</span><br/>
+            <span id="location">Finding the location</span>
+            <span id="weather">...</span><br/>
             <img id="weather-emoji" src="./Assets/Images/music_note.svg" alt="music note"/>
           </div>
       </section>
@@ -162,7 +162,8 @@
     <section class="footer margin">
       <div class="footer-menu">
         <div class="logo"><a href="index.html">Slice</a></div>
-        <div class="footer-menu-item"><a href="index.html">About Creators</a></div>
+        <div class="footer-menu-item"><a href="https://www.soyeonkim.info/">About Creators: So Yeon Kim</a></div>
+        <div class="footer-menu-item"><a href="https://www.andiehan.info/">About Creators: Andie Han</a></div>
         <div class="footer-menu-item"><a href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a" target="_blank">Documentation</a></div>
       </div>
     </section>
