--- a/index.html
+++ b/index.html
@@ -77,49 +77,42 @@
 
         <!-- cards -->
         <div class="stack-cards-container">
-          <!-- function 1 -->
             <ul class="stack-cards js-stack-cards">
-              <li class="stack-cards__item js-stack-cards__item">
-                  <div class="text-component">
-                    <h2>Organize tangled tasks<br/>
+
+               <!-- function 1 -->
+              <li class="stack-cards-item">
+                <div class="text-component">
+                  <h2>Organize tangled tasks<br/>
                        like stacking blocks</h2>
                     <p class="function-description">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
-                  </div>
+                </div>
       
-                  <div>
+                <div>
                     <img src="Assets/Images/function-1.png" alt="Function 1">
-                  </div>
-
                 </div>
               </li>
-            </ul>
 
-            <!-- function 2 -->
-            <ul class="stack-cards js-stack-cards">
-              <li class="stack-cards__item js-stack-cards__item">
-                  <div class="text-component">
-                    <h2>Plan 24 hours<br/>
-                      with list and calendar</h2>
-                    <p class="function-description">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
-                  </div>
-      
-                  <div>
-                    <img src="Assets/Images/function-2.png" alt="Function 2">
-                  </div>
+              <!-- function 2 -->
+              <li class="stack-cards-item">
+                <div class="text-component">
+                  <h2>Plan 24 hours<br/>
+                    with list and calendar</h2>
+                  <p class="function-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
                 </div>
-              </li>
-            </ul>
+                <div>
+                  <img src="Assets/Images/function-2.png" alt="Function 2">
+                </div>
+            </li>
 
             <!-- function 3 -->
-            <ul class="stack-cards js-stack-cards">
-              <li class="stack-cards__item js-stack-cards__item">
-                  <div class="text-component">
+            <li class="stack-cards-item">
+                <div class="text-component">
                     <h2>Check progress<br/>
                       anytime on watch</h2>
                     <p class="function-description">
@@ -131,10 +124,11 @@
                   <div>
                     <img src="Assets/Images/function-3.png" alt="Function 3">
                   </div>
-                </div>
-              </li>
-            </ul>
+            </li>
 
+
+
+          </ul>
 
         </div>
     </section>
