fixed screen shaking
@david currie

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- navigation bar -->
-      <section class="navigation margin">
+      <section class="navigation margin overflow-x">
         <div class="logo"><a href="index.html">Slice</a></div>
           <div class="weather-container">
             <span id="location">Finding the location</span>
@@ -24,7 +24,7 @@
 
 
     <!-- Intro Title -->
-    <section class="title margin"> 
+    <section class="title margin overflow-x"> 
         <!-- left description -->
         <div class="titleBox">
           <div class="app-name">
@@ -64,7 +64,7 @@
 
 
     <!-- Main Section:Functions -->
-    <div class="scroll">
+    <div class="scroll overflow-x">
       <p style="opacity: 1;">Scroll Down</p>
     </div>
 
@@ -125,16 +125,13 @@
                     <img src="Assets/Images/function-3.png" alt="Function 3">
                   </div>
             </li>
-
-
-
           </ul>
 
         </div>
     </section>
 
     <!-- Quote holder -->
-    <section class="quote-container-box">
+    <section class="quote-container-box overflow-x">
       <div class="quote-container">
         <div class="white-container" >
           <img src = "./Assets/Images/quote-white.svg" alt="white container"/>
@@ -153,7 +150,7 @@
 
 
     <!-- Footer -->
-    <section class="footer margin">
+    <section class="footer margin overflow-x">
       <div class="footer-menu">
         <div class="logo"><a href="index.html">Slice</a></div>
         <div class="footer-menu-item"><a href="https://www.soyeonkim.info/">About Creators: So Yeon Kim</a></div>
