weather icon update
weather icon updated

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     <section class="footer margin overflow-x">
       <div class="footer-menu">
         <div class="logo"><a href="index.html">Slice</a></div>
-        <div class="footer-menu-item"><a href="https://www.soyeonkim.info/">About Creators: So Yeon Kim</a></div>
-        <div class="footer-menu-item"><a href="https://www.andiehan.info/">About Creators: Andie Han</a></div>
+        <div class="footer-menu-item"><a href="https://www.soyeonkim.info/" target="_blank">About Creators: So Yeon Kim</a></div>
+        <div class="footer-menu-item"><a href="https://www.andiehan.info/" target="_blank">About Creators: Andie Han</a></div>
         <div class="footer-menu-item"><a href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a" target="_blank">Documentation</a></div>
       </div>
     </section>
