--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                <!-- function 1 -->
               <li class="stack-cards-item">
                 <div class="text-component">
-                  <h2>Organize tangled tasks<br/>
-                       like stacking blocks</h2>
+                  <h2>Organize your messy thoughts<br/>
+                      into a to-do list</h2>
                     <p class="function-description">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -98,8 +98,9 @@
               <!-- function 2 -->
               <li class="stack-cards-item">
                 <div class="text-component">
-                  <h2>Plan 24 hours<br/>
-                    with list and calendar</h2>
+                  <h2>Place your to-dos<br/>
+                    in the timeline</br>
+                    to visualize your 24 hours</h2>
                   <p class="function-description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -113,8 +114,9 @@
             <!-- function 3 -->
             <li class="stack-cards-item">
                 <div class="text-component">
-                    <h2>Check progress<br/>
-                      anytime on watch</h2>
+                    <h2>Check progress anytime<br/>
+                      on wearable devices</br>
+                      and home screen</h2>
                     <p class="function-description">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
