--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                 </div>
       
                 <div>
-                    <img src="Assets/Images/function-1.png" alt="Function 1">
+                    <!-- <img src="Assets/Images/function-1.png" alt="Function 1"> -->
+                    <lottie-player id = "playInView1" src="Assets/Images/a_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
                 </div>
               </li>
 
@@ -107,7 +108,8 @@
                   </p>
                 </div>
                 <div>
-                  <img src="Assets/Images/Function-2.png" alt="Function 2">
+                  <!-- <img src="Assets/Images/Function-2.png" alt="Function 2"> -->
+                  <lottie-player id = "playInView2" src="Assets/Images/b_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
                 </div>
             </li>
 
@@ -124,7 +126,8 @@
                   </div>
       
                   <div>
-                    <img src="Assets/Images/function-3.png" alt="Function 3">
+                    <!-- <img src="Assets/Images/function-3.png" alt="Function 3"> -->
+                    <lottie-player id = "playInView3" src="Assets/Images/c_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
                   </div>
             </li>
           </ul>
@@ -137,7 +140,7 @@
       <div class="quote-container">
         <div class="white-container" >
           <img src = "./Assets/Images/quote-white.svg" alt="white container"/>
-          <p class="API-text">"API Text Holder"</p>
+          <div class="API-text" id="phrases"></div>
         </div>
         <div class="character-container">
           <div class="left-character">
@@ -164,7 +167,8 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="script.js"></script>
-
 
 </html>
