added new images

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
         </div>
         <div class="character-container">
           <div class="left-character">
-            <img src = "./Assets/Images/character-left.png" alt="white container"/>
+            <img src = "./Assets/Images/characters-left.png" alt="white container" style = "width : 20vw"/>
           </div>
           <div class="right-character">
-            <img src = "./Assets/Images/character-right.png" alt="white container"/>
+            <img src = "./Assets/Images/characters-right.png" alt="white container" style = "width : 17vw"/>
           </div>
         </div>
       </div>
