--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+
     <!-- navigation bar -->
       <section class="navigation margin overflow-x">
         <div class="logo"><a href="index.html">Slice</a></div>
@@ -80,41 +82,46 @@
             <ul class="stack-cards js-stack-cards">
 
                <!-- function 1 -->
-              <li class="stack-cards-item">
-                <div class="text-component">
-                  <h2>Organize your messy thoughts<br/>
-                      into a to-do list</h2>
+              <div class = "scroll-snapper">
+                <li class="stack-cards-item">
+                  <div class="text-component">
+                    <h2>Organize your messy thoughts<br/>
+                        into a to-do list</h2>
+                      <p class="function-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      </p>
+                  </div>
+        
+                  <div>
+                      <!-- <img src="Assets/Images/function-1.png" alt="Function 1"> -->
+                      <lottie-player id = "playInView1" src="Assets/Images/a_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
+                  </div>
+                </li>
+              </div>
+
+              <!-- function 2 -->
+              <div class = "scroll-snapper">
+                <li class="stack-cards-item">
+                  <div class="text-component">
+                    <h2>Place your to-dos<br/>
+                      in the timeline</br>
+                      to visualize your 24 hours</h2>
                     <p class="function-description">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
-                </div>
-      
-                <div>
-                    <!-- <img src="Assets/Images/function-1.png" alt="Function 1"> -->
-                    <lottie-player id = "playInView1" src="Assets/Images/a_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
-                </div>
-              </li>
-
-              <!-- function 2 -->
-              <li class="stack-cards-item">
-                <div class="text-component">
-                  <h2>Place your to-dos<br/>
-                    in the timeline</br>
-                    to visualize your 24 hours</h2>
-                  <p class="function-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  </p>
-                </div>
-                <div>
-                  <!-- <img src="Assets/Images/Function-2.png" alt="Function 2"> -->
-                  <lottie-player id = "playInView2" src="Assets/Images/b_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
-                </div>
-            </li>
+                  </div>
+                  <div>
+                    <!-- <img src="Assets/Images/Function-2.png" alt="Function 2"> -->
+                    <lottie-player id = "playInView2" src="Assets/Images/b_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
+                  </div>
+                </li>
+              </div>
 
             <!-- function 3 -->
-            <li class="stack-cards-item">
+            <div class = "scroll-snapper">
+              <li class="stack-cards-item">
                 <div class="text-component">
                     <h2>Check progress anytime<br/>
                       on wearable devices</br>
@@ -129,7 +136,8 @@
                     <!-- <img src="Assets/Images/function-3.png" alt="Function 3"> -->
                     <lottie-player id = "playInView3" src="Assets/Images/c_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
                   </div>
-            </li>
+              </li>
+            </div>
           </ul>
 
         </div>
