working on media query

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <!-- left description -->
         <div class="titleBox">
           <div class="app-name">
-            <h1>To SLICE</h1>
+            <h1 class="title-text">To SLICE</h1>
             <img class="app-logo" src="./Assets/Images/app-logo.svg"/>
+            <img class="app-logo-mobile" src="./Assets/Images/app logo with box.svg"/>
           </div>
 
           <div class="title-description">
@@ -148,7 +149,9 @@
       <div class="quote-container">
         <div class="white-container" >
           <img src = "./Assets/Images/quote-white.svg" alt="white container"/>
-          <div class="API-text" id="phrases"></div>
+          
+            <div class="API-text" id="phrases"> </div>
+          
         </div>
         <div class="character-container">
           <div class="left-character">
