--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
           <!-- <img class="title-line" src="./Assets/Images/main-line.svg"/>    -->
 
             <!-- buttons to appstore -->
-            <div　class="title-button-container" style="display: flex;
-            justify-content: flex-start;
-            column-gap: 1.5rem;">
+            <div class="title-button-container">
               <!-- App Store -->
               <a class="title-button" href="https://www.apple.com/" target="_blank">
                 <i><img src = "./Assets/Images/apple.svg" alt="Apple Logo"/></i>
