--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         
                   <div>
                       <!-- <img src="Assets/Images/function-1.png" alt="Function 1"> -->
-                      <lottie-player id = "playInView1" src="Assets/Images/a_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
+                      <lottie-player class ="player" id = "playInView1" src="Assets/Images/a_final.json" background="transparent"  speed="1"  autoplay loop ></lottie-player>
                   </div>
                 </li>
               </div>
@@ -113,7 +113,7 @@
                   </div>
                   <div>
                     <!-- <img src="Assets/Images/Function-2.png" alt="Function 2"> -->
-                    <lottie-player id = "playInView2" src="Assets/Images/b_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
+                    <lottie-player class ="player" id = "playInView2" src="Assets/Images/b_final.json" background="transparent"  speed="1"  autoplay loop ></lottie-player>
                   </div>
                 </li>
               </div>
@@ -133,7 +133,7 @@
       
                   <div>
                     <!-- <img src="Assets/Images/function-3.png" alt="Function 3"> -->
-                    <lottie-player id = "playInView3" src="Assets/Images/c_final.json" background="transparent"  speed="1"  style="width: 50vw" autoplay loop ></lottie-player>
+                    <lottie-player class ="player" id = "playInView3" src="Assets/Images/c_final.json" background="transparent"  speed="1"  autoplay loop ></lottie-player>
                   </div>
               </li>
             </div>
