--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
                   </div>
         
                   <div>
-                      <!-- <img src="Assets/Images/function-1.png" alt="Function 1"> -->
                       <lottie-player class ="player" id = "playInView1" src="Assets/Images/a_final.json" background="transparent"  speed="1"  autoplay loop ></lottie-player>
                   </div>
                 </li>
@@ -164,12 +163,21 @@
 
 
     <!-- Footer -->
-    <section class="footer margin overflow-x">
+    <section class="footer-pc margin overflow-x">
       <div class="footer-menu">
         <div class="logo"><a href="index.html">Slice</a></div>
         <div class="footer-menu-item"><a href="https://www.soyeonkim.info/" target="_blank">About Creators: So Yeon Kim</a></div>
         <div class="footer-menu-item"><a href="https://www.andiehan.info/" target="_blank">About Creators: Andie Han</a></div>
         <div class="footer-menu-item"><a href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a" target="_blank">Documentation</a></div>
+      </div>
+    </section>
+
+    <section class="footer-mobile margin overflow-x">
+      <div class="footer-menu">
+        <div class="logo"><a href="index.html">Slice</a></div>
+        <div class="footer-menu-item"><a href="https://www.soyeonkim.info/" target="_blank">So Yeon Kim</a></div>
+        <div class="footer-menu-item"><a href="https://www.andiehan.info/" target="_blank">Andie Han</a></div>
+        <div class="footer-menu-item"><a href="https://www.notion.so/syk-adaptingeverydayitems/Final-Project-Slice-3da964497f6d4370b038dea14981d39a" target="_blank">Doc</a></div>
       </div>
     </section>
 
