Margin Problem Changed
Snap-scroll + Margin Problem Fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p style="opacity: 1;">Scroll Down</p>
     </div>
 
-    <section class="main margin">
+    <section class="main">
         <!-- wave -->
         <div class="waves">
             <div class="wave1"></div>
@@ -43,9 +43,9 @@
 
         <!-- cards -->
 
-            <div class="stack-cards" id="WS-SL--content">
+            <div class="stack-cards">
 
-              <section class="title margin overflow-x sectionDivider" id="anchor-1"> 
+              <section class="title margin overflow-x sectionDivider"> 
                 <!-- left description -->
                   <div class="titleBox">
                     <div class="app-name">
@@ -81,7 +81,7 @@
             </section>
 
                <!-- function 1 -->
-                <div class="stack-cards-item sectionDivider" id="anchor-2">
+                <div class="stack-cards-item sectionDivider">
                   <div class="text-component">
                     <h2>Organize your messy thoughts<br/>
                         into a to-do list</h2>
@@ -97,7 +97,7 @@
                 </div>
 
               <!-- function 2 -->
-                <div class="stack-cards-item sectionDivider" id="anchor-3">
+                <div class="stack-cards-item sectionDivider">
                   <div class="text-component">
                     <h2>Place your to-dos<br/>
                       in the timeline</br>
@@ -113,7 +113,7 @@
                 </div>
 
             <!-- function 3 -->
-              <div class="stack-cards-item sectionDivider" id="anchor-4">
+              <div class="stack-cards-item sectionDivider">
                 <div class="text-component">
                     <h2>Check progress anytime<br/>
                       on wearable devices</br>
