Lottie Animation Problem

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-
+  <div id="preloader">
+    Slice
+  </div>
 
     <!-- navigation bar -->
       <section class="navigation margin overflow-x">
