--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slice</title>
+    <link rel="icon" type="image/x-icon" href="./Assets/Images/favicon.png">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/tma0pfw.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
-</head>
+  </head>
 
 <body>
-  <div id="preloader">
-    Slice
-  </div>
-
     <!-- navigation bar -->
       <section class="navigation margin overflow-x">
         <div class="logo"><a href="index.html">Slice</a></div>
