Mobile Margin Problem Fixed
-Mobile Margin
-Mobile navigation disabled

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div id="loader">
     <p class="loader-text">Slice</p>
   </div>
-  
+
   <!-- navigation bar -->
   <section class="navigation margin overflow-x landing">
     <div class="logo"><a href="index.html">Slice</a></div>
@@ -33,7 +33,7 @@
   </section>
 
   <!-- Main Section:Functions -->
-  <div class="scroll overflow-x landing">
+  <div class="scroll overflow-x">
     <p style="opacity: 1;">Scroll Down</p>
   </div>
 
