--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
     </div>
   </section>
 
-  <section class="footer-mobile margin overflow-x">
+  <section class="footer-mobile overflow-x">
     <div class="footer-menu">
-      <div class="logo"><a href="index.html">Slice</a></div>
+      <div class="logo-main"><a href="index.html">Slice</a></div>
       <div class="footer-menu-item"><a href="https://www.soyeonkim.info/" target="_blank">So Yeon Kim</a></div>
       <div class="footer-menu-item"><a href="https://www.andiehan.info/" target="_blank">Andie Han</a></div>
       <div class="footer-menu-item"><a
@@ -186,9 +186,6 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/path/to/jquery.slim.min.js"></script>
-<script src="/path/to/ws-scroli.js"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script src="script.js"></script>
