Main CSS Cleanup

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
   <!-- navigation bar -->
-  <section class="navigation margin overflow-x landing">
+  <section class="navigation margin overflow-x">
     <div class="logo"><a href="index.html">Slice</a></div>
     <div class="weather-container">
       <span id="location">Finding the location</span>
@@ -37,17 +37,15 @@
     <p style="opacity: 1;">Scroll Down</p>
   </div>
 
-  <section class="main landing">
-    <!-- wave -->
-    <div class="waves">
-      <div class="wave1"></div>
-      <div class="wave2"></div>
-    </div>
+  <!-- wave -->
+  <div class="waves">
+    <div class="wave1"></div>
+    <div class="wave2"></div>
+  </div>
 
-    <!-- cards -->
-
-    <div class="stack-cards landing">
-
+  <section class="main">
+    <!-- Main Contents -->
+    <div class="stack-cards">
       <section class="title margin overflow-x sectionDivider">
         <!-- left description -->
         <div class="titleBox">
@@ -82,7 +80,6 @@
         </div>
         <!-- right image -->
         <img class="title-mockup" src="./Assets/Images/Right.png" />
-
       </section>
 
       <!-- function 1 -->
